# FHV_Master_Embedded_Programming

./: connect_commands.txt
Acceleration_Sensor/: CMakeLists.txt
Dice_Example/: CMakeLists.txt  sdkconfig
Dice_Example/main/: CMakeLists.txt  blink_example_main.c  idf_component.yml
Egg_Clock/: CMakeLists.txt
Egg_Clock/main/: blink_example_main.c  timer_logic.c
Hackathon_Light_Pong_Server_try2/: CMakeLists.txt
Hackathon_Light_Pong_Server_try2/friend_main_code/main/main/dmx/: headlight_controller.c
Hackathon_Light_Pong_Server_try2/main/: CMakeLists.txt  blink_example_main.c  main.c
Hackathon_Light_Pong_Server_try2/main/dmx/: dmx_controller.c  headlight_controller.h  mh_x25_controller.c  mh_x25_controller.h
Hackathon_Light_Pong_Server_try2/main/node/: actor.h
Hackathon_Light_Pong_Server_try2/main/node/types/headlight/: headlight_node.h
Hackaton_Light_Pong_Server/: QUICK_START.c
Hackaton_Light_Pong_Server/components/dmx_driver/: dmx_driver.c
Hackaton_Light_Pong_Server/components/dmx_driver/include/: dmx_driver.h
Hackaton_Light_Pong_Server/components/espnow_comm/: espnow_handler.c
Hackaton_Light_Pong_Server/components/espnow_comm/include/: espnow_handler.h
Hackaton_Light_Pong_Server/components/light_effects/: light_effects.c
Hackaton_Light_Pong_Server/components/light_effects/include/: light_effects.h
Hackaton_Light_Pong_Server/components/mh_x25_driver/: mh_x25_driver.c
Hackaton_Light_Pong_Server/components/mh_x25_driver/include/: mh_x25_driver.h
Hackaton_Light_Pong_Server/main/: CMakeLists.txt  blink_example_main.c  dmx.c  dmx.h  light_pong_main.c  mh_x25.c  mh_x25.h
Hackaton_Light_Pong_Server/main/communication/: espnow_handler.c  espnow_handler.h
Hackaton_Light_Pong_Server/main/config/: game_config.h  hardware_config.h
Hackaton_Light_Pong_Server/main/drivers/mh_x25/: mh_x25.c  mh_x25.h
Hackaton_Light_Pong_Server/main/effects/: light_effects.h
Hackaton_Light_Pong_Server/main/game/: game_controller.c  game_controller.h  game_types.h
Hackaton_Light_Pong_Server/main/main/: CMakeLists.txt  main.c
Hackaton_Light_Pong_Server/main/main/dmx/: dmx_controller.c  dmx_controller.h
Hackaton_Light_Pong_Server/main/main/node/: node_starter.c  node_starter.h
Hackaton_Light_Pong_Server/main/main/node/types/headlight/: headlight_node.c
Temperature_Sensor_Test/: CMakeLists.txt
Temperature_Sensor_Test/datasheets/: Datasheet_SHTC3.pdf:Zone.Identifier
Temperature_Sensor_Test/main/: CMakeLists.txt  hello_world_main.c
Test_Blinky_Application/: CMakeLists.txt
Test_Blinky_Application/main/: blink_example_main.c
