idf_component_register(
    SRCS 
        "main.c" 
        "node/node_starter.c" 
        "mqtt/mqtt.c" 
        "wifi/wifi.c" 
        "node/types/sensor/sensor_node.c" 
        "dmx/dmx_controller.c" 
        "dmx/headlight_controller.c" 
        "node/types/headlight/headlight_node.c" 
        "node/types/led_ws2812/led_node.c"
    INCLUDE_DIRS 
        "." 
        "mqtt" 
        "node" 
        "node/types" 
        "node/types/sensor" 
        "wifi"
    REQUIRES 
        json 
        nvs_flash 
        driver 
        esp_event 
        esp_wifi 
        mqtt 
        esp_timer
        nvs_flash
)